fix(form field): addon alignment (#2460)

--- a/src/framework/theme/components/form-field/_form-field.component.theme.scss
+++ b/src/framework/theme/components/form-field/_form-field.component.theme.scss
@@ -5,6 +5,14 @@
  */
 
 @mixin nb-form-field-theme() {
+  .nb-form-control-container {
+    max-width: inherit;
+
+    input {
+      width: 100%;
+    }
+  }
+
   .nb-form-field-addon {
     display: flex;
     justify-content: center;
@@ -31,8 +39,13 @@
   }
 
   @each $size in nb-get-sizes() {
+    $form-field-max-width: nb-theme(form-field-#{$size}-max-width);
     $addon-height: nb-theme(form-field-addon-#{$size}-height);
     $addon-width: nb-theme(form-field-addon-#{$size}-width);
+
+    .nb-form-field-limited-width.nb-form-field-size-#{$size} {
+      max-width: $form-field-max-width;
+    }
 
     .nb-form-field-prefix-#{$size},
     .nb-form-field-suffix-#{$size} {
